# altcase

./: .gitignore  Cargo.toml  README.md  altcase.desktop  install.sh
src/: case_convert.rs  cmd_args.rs  gui.rs  main.rs
