[package]
name = "altcase"
version = "0.1.0"
description = "Convert text into alternating case with the command-line or with a GUI"
authors = ["Tseytisi"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.17.1"